--- a/kalturaPlay/src/main/res/values/strings.xml
+++ b/kalturaPlay/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="action_settings">Settings</string>
     <string name="footer">Powered by Kaltura</string>
     <string name="demo">Demo</string>
-    <string name="main_message">This player should be used with the Kaltura Player&lt;br/&gt; You can learn more &lt;a href="http://player.kaltura.com/docs/NativeCallout"&gt;Here&lt;/a&gt;.</string> 
+    <string name="main_message">This player should be used with the Kaltura Player&lt;br/> You can learn more &lt;a href="http://player.kaltura.com/docs/NativeCallout">Here&lt;/a>.</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="prop_iframe_url">iframeUrl</string>
+
 </resources>
