--- a/kalturaPlay/src/main/res/values/strings.xml
+++ b/kalturaPlay/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">KalturaPlay</string>
     <string name="action_settings">Settings</string>
-    <string name="footer">Powered by Kaltura <a href="http://player.kaltura.com/docs/NativeCallout">Learn More</a></string>
+    <string name="footer">Powered by Kaltura &lt;a href="http://player.kaltura.com/docs/NativeCallout">Learn More&lt;/a>.</string>
     <string name="demo">Try Our Demo!</string>
     <string name="main_message">Use this app to view Kaltura video content</string>
     <string name="prop_iframe_url">iframeUrl</string>
