--- a/playerSDK/src/main/res/values/strings.xml
+++ b/playerSDK/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_activity_browser">BrowserActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_kinternal_browser">Share</string>
 
 </resources>
