--- a/KalturaDemos/BasicPlayerDemo/src/main/res/values/strings.xml
+++ b/KalturaDemos/BasicPlayerDemo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">KalturaPlayerDemo</string>
+    <string name="app_name">KPlayer Demo</string>
 </resources>
