--- a/KalturaDemos/MultiPlayerDemo/src/main/res/values/strings.xml
+++ b/KalturaDemos/MultiPlayerDemo/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Kaltura Multi Player</string>
+    <string name="app_name">KMulti Player Demo</string>
 </resources>
