--- a/KalturaDemos/BasicPlayerDemo/src/main/res/values/strings.xml
+++ b/KalturaDemos/BasicPlayerDemo/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">KPlayer Demo</string>
+    <string name="video">Video</string>
+    <string name="audio">Audio</string>
+    <string name="text">Text</string>
 </resources>
