--- a/playerSDK/src/main/res/values/strings.xml
+++ b/playerSDK/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">KPlayerSDK</string>
+    <string name="off">[off]</string>
+    <string name="enable_background_audio">Play in background</string>
     <string name="title_activity_browser">BrowserActivity</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_kinternal_browser">Share</string>
