--- a/KalturaDemos/CCPlayerDemo/src/main/res/values/strings.xml
+++ b/KalturaDemos/CCPlayerDemo/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="video">Video</string>
     <string name="audio">Audio</string>
     <string name="text">Text</string>
+
+    <string name="app_id">48A28189</string>
+    <string name="media_route_menu_title">Play on&#8230;</string>
+
+
+    <string name="show_queue">Show Queue</string>
+
 </resources>
